added more kills and education to index.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p>Bellow is the link to the formal training course I took in 2024 and if you are looking into becoming a software-engineer I highly recoment you start there.</p>
     <h3><a href="https://usfbootcamps.com/leads/software-engineering/?utm_source=google&utm_medium=cpc&utm_campaign=146354195888&utm_content=664260239173&utm_term=usf%20coding%20bootcamp&hsa_acc=3678112474&hsa_cam=18225455903&hsa_grp=146354195888&hsa_ad=664260239173&hsa_src=g&hsa_tgt=kwd-405991151648&hsa_kw=usf%20coding%20bootcamp&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=CjwKCAiA-vOsBhAAEiwAIWR0Td67NmeekJbzqt-ozfDTIb_9vxAQgf6Pzkkh9F9-tpVXI3hphB3tKRoCaUMQAvD_BwE">Recomended training.</a></h2>
   <ul>
-      <li><h2>Skills I learn from that course.</h2></li>
+      <li><h2>education I learn from that course.</h2></li>
       <li>HTML</li>
       <LI>CSS</LI>
       <li>java script</li>
@@ -42,5 +42,25 @@
 
 
     </ul></section>
+
+    <section><p><ul>Skills I learned on my own over the years.</ul></p>
+                    <ol>
+                      <li>Hardware-engineering</li>
+                      <li>Website devlopment</li>
+                      <li>Database maintance</li>
+                      <li>Excel</li>
+                      <li>Word</li>
+                      <li>Avatar design</li>
+                  
+                    </ol>
+    </section>
+
+    <section><p>I believe that there are core skills we all have that are not tought but instilled into us as children or driven into us as we get older and wiser. Here is a short list of the ones I hold myself above others.</p><p></p><ul>Core beliefs</ul>
+    <ol>Self reliance</ol>
+  <ol>Time managment</ol>
+<ol>Self accountability</ol>
+
+
+</p></section>
   </body>
 </html>
