--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
     </section>
 
     <section><p>I believe that there are core skills we all have that are not tought but instilled into us as children or driven into us as we get older and wiser. Here is a short list of the ones I hold myself above others.</p><p></p><ul>Core beliefs</ul>
-    <ol>Self reliance</ol>
-  <ol>Time managment</ol>
-<ol>Self accountability</ol>
+    <ol><li>Self accountability.</li>
+    <li>Time management.</li>
+  <li>Team growth</li>
+<li>Ability to take <em>feedback!.</em></li>
+<li>Felexability in ones projects.</li></ol>
 
 
 </p></section>
