Added in table.

--- a/index.html
+++ b/index.html
@@ -33,16 +33,12 @@
 <p>Bellow is the link to the formal training course I took in 2024 and if you are looking into becoming a software-engineer I highly recoment you start there.</p>
     <h3><a href="https://usfbootcamps.com/leads/software-engineering/?utm_source=google&utm_medium=cpc&utm_campaign=146354195888&utm_content=664260239173&utm_term=usf%20coding%20bootcamp&hsa_acc=3678112474&hsa_cam=18225455903&hsa_grp=146354195888&hsa_ad=664260239173&hsa_src=g&hsa_tgt=kwd-405991151648&hsa_kw=usf%20coding%20bootcamp&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=CjwKCAiA-vOsBhAAEiwAIWR0Td67NmeekJbzqt-ozfDTIb_9vxAQgf6Pzkkh9F9-tpVXI3hphB3tKRoCaUMQAvD_BwE">Recomended training.</a></h2>
   
-      <li><h2>education I learn from that course.</h2></li>
-      <ul></ul><li>HTML</li>
-      <LI>CSS</LI>
-      <li>java script</li>
-      <li>software engeneering</li>
-
-
-
-    </ul></section>
-
+      <table><thead><tr>Education I learn from that course.</tr></thead>
+        <tr>CSS</tr>
+        <tr>java script</tr>
+        <tr>software engeneering</tr>
+      </table>
+      
     <section><p><ul>Skills I learned on my own over the years.</ul></p>
                     <ol>
                       <li>Hardware-engineering</li>
