--- a/index.html
+++ b/index.html
@@ -67,5 +67,9 @@
 
 
 </p></section>
+
+<label for="email">Email:</label><form action="text" aria-placeholder="Enter your email here.">
+
+</form>
   </body>
 </html>
