--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
   <input type="number" name="Phone Number" id="contactinfo" placeholder="111-111-1111"><br>
 
   <input type="radio" name="Like it" id="contactinfo"><label for="contactinfo">Liked it.</label><br>
+  <input type="radio" name="Like it" id="contactinfo"><label for="contactinfo">We should talk.</label><br>
+  <input type="radio" name="Like it" id="contactinfo"><label for="contactinfo">You need help, contact me for help.</label><br>
 <button type="submit">Save info</button>
 </form>
   </body>
