Corrected coding on form.

--- a/index.html
+++ b/index.html
@@ -75,11 +75,17 @@
   <input type="text" name="Name" id="contactinfo" placeholder="Yourname">
   <input type="email" name="email" id="contactino" placeholder="youemail@domain.???">
   <input type="number" name="Phone Number" id="contactinfo" placeholder="111-111-1111"><br>
-
-  <input type="radio" name="Like it" id="contactinfo"><label for="contactinfo">Liked it.</label><br>
-  <input type="radio" name="Like it" id="contactinfo"><label for="contactinfo">We should talk.</label><br>
-  <input type="radio" name="Like it" id="contactinfo"><label for="contactinfo">You need help, contact me for help.</label><br>
-<button type="submit">Save info</button>
+<label for="contactinfo">
+  <input type="radio" name="Feedback" id="contactinfo" value="Liked it"> Liked it! <br>
+</label>
+<label for="contactinfo">
+  <input type="radio" name="Feedback" id="contactinfo" value="We should talk."> We should talk. <br>
+</label><label for="contactinfo">
+  <input type="radio" name="Feedback" id="contactinfo" value="help"> You need help, contact me. <br>
+</label>
+<button type="submit">Click to submit info.</button>
 </form>
+<small> Please keep in mind this iformation for to my public server and anything you put in can be found by someone who know where to look. So I would advise you not to but anything you do not want out there.</small>
+
   </body>
 </html>
