--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 </p></section>
 <form action="Userforms" method="post">
   <label for="contactinfo">Please enter you name and email or phone number to reach back out to you. If you liked what you see or have observations about what I can do better.</label><br>
-  <input type="text" name="Name" id="contactinfo" placeholder="Yourname">
-  <input type="email" name="email" id="contactino" placeholder="youemail@domain.???">
+  <input type="text" name="Name" id="contactinfo" placeholder="Your name">
+  <input type="email" name="email" id="contactino" placeholder="email@domain.???">
   <input type="number" name="Phone Number" id="contactinfo" placeholder="111-111-1111"><br>
 <label for="contactinfo">
   <input type="radio" name="Feedback" id="contactinfo" value="Liked it"> Liked it! <br>
