formated to look corrreclt even though table is not working.

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
   
       <table>
         <thead>
-          <tr>Education I learn from that course.</tr>
+          <tr><strong>Education I learn from that course. </strong></tr><br>
         </thead>
 
         <tbody>
-          <tr>CSS</tr>
-          <tr>java script</tr>
-          <tr>software engeneering</tr>
+          <tr>CSS</tr> <br>
+          <tr>java script</tr> <br>
+          <tr>software engeneering</tr> <br>
         </tbody>
 
       </table>
