atemted to correct table.

--- a/index.html
+++ b/index.html
@@ -33,19 +33,34 @@
 <p>Bellow is the link to the formal training course I took in 2024 and if you are looking into becoming a software-engineer I highly recoment you start there.</p>
     <h3><a href="https://usfbootcamps.com/leads/software-engineering/?utm_source=google&utm_medium=cpc&utm_campaign=146354195888&utm_content=664260239173&utm_term=usf%20coding%20bootcamp&hsa_acc=3678112474&hsa_cam=18225455903&hsa_grp=146354195888&hsa_ad=664260239173&hsa_src=g&hsa_tgt=kwd-405991151648&hsa_kw=usf%20coding%20bootcamp&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=CjwKCAiA-vOsBhAAEiwAIWR0Td67NmeekJbzqt-ozfDTIb_9vxAQgf6Pzkkh9F9-tpVXI3hphB3tKRoCaUMQAvD_BwE">Recomended training.</a></h2>
   
+      
       <table>
         <thead>
-          <tr><strong>Education I learn from that course. </strong></tr><br>
+          <tr>
+            <strong>Education I learn from that course. </strong>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>HTML</tr>
+          <tr>CSS</tr>
+          <tr>Java Script</tr>
+          <tr>software-engineering</tr>
+        </tbody>
+      </table>
+      <!--Uclear as to why this is showing up and a single line of text and not a table. I double checked my coding and refreshed. Still not showing up correctly. Whats wrong?
+        
+        <table>
+        <thead>
+          <tr><strong>Education I learn from that course. </strong></tr>
         </thead>
 
         <tbody>
-          <tr>CSS</tr> <br>
-          <tr>java script</tr> <br>
-          <tr>software engeneering</tr> <br>
+          <tr>CSS</tr>
+          <tr>java script</tr>
+          <tr>software engeneering</tr>
         </tbody>
 
-      </table>
-      <!-- Uclear as to why this is showing up and a single line of text and not a table. I double checked my coding and refreshed. Still not showing up correctly. Whats wrong?-->
+      </table>-->
 
 
 
