edited layout for easy of reading the code.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
 
 
-    <section><p><ul>Skills I learned on my own over the years.</ul></p>
+    <section>
+      <p>Skills I learned on my own over the years.
                     <ul>
                       <li>Hardware-engineering</li>
                       <li>Website devlopment</li>
@@ -72,16 +73,18 @@
                       <li>Excel</li>
                       <li>Word</li>
                       <li>Avatar design</li>
-                  
-                    </ul>
+                  </ul>
+                  </p>
     </section>
 
-    <section><p>I believe that there are core skills we all have that are not tought but instilled into us as children or driven into us as we get older and wiser. Here is a short list of the ones I hold myself above others.</p><p></p><ul>Core beliefs</ul>
-    <ol><li>Self accountability.</li>
-    <li>Time management.</li>
-  <li>Team growth</li>
-<li>Ability to take <em>feedback!.</em></li>
-<li>Felexability in ones projects.</li></ol>
+    <section>
+      <p>I believe that there are core skills we all have that are not tought but instilled into us as children or driven into us as we get older and wiser. Here is a short list of the ones I hold myself above others.</p><p></p><ul>Core beliefs</ul>
+    <ol>
+      <li>Self accountability.</li>
+      <li>Time management.</li>
+      <li>Team growth</li>
+      <li>Ability to take <em>feedback!.</em></li>
+      <li>Felexability in ones projects.</li></ol>
 
 
 </p></section>
