Made it look more like Resume

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <!-- TODO: Add your code. -->
-    <h1>FOD's 1<sup>st</sup> Page</h1>  
+    <h1>Michael C Gruber</h1>  
     <!-- <p>Mike believed he knew all about HTML before starting this project. 
         However he did learn a lot of rules he was not following.</p> -->
     
-    <img src="img/FOD.png" alt="Small male animA face with grey heair and a dragon eating its tail around it.">
+    
 <section><article>
   <p>My first experience with <b>computers</b> dates all the way back to around 1989 when I played <i>Number muncher</i> in class the first time. 
   Back then it was in AP Math that we were afforded the opportunity to see our first computers. 
