--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- TODO: Add your code. -->
     <h1>Michael C Gruber</h1>  
 
-    <img src="img/IMG_20240123_123426071.jpg" alt="Close headshot of Michael, the CV's creator.">
+    <img src="img/IMG_20240123_123426071.jpg" 40p 40p alt="Close headshot of Michael, the CV's creator.">
     <!-- <p>Mike believed he knew all about HTML before starting this project. 
         However he did learn a lot of rules he was not following.</p> -->
     
