--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>A Digital CV for Mike Gruber</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,100;1,300;1,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="cv.css">
+
   </head>
   <body>
     <!-- TODO: Add your code. -->
