--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
       <table>
         <thead>
           <tr>
-            <strong>Education I learn from that course. </strong>
+            <strong>Education I learn from that course. </strong> 
+            
+            <br>
           </tr>
         </thead>
         <tbody>
-          <tr>HTML</tr>
-          <tr>CSS</tr>
-          <tr>Java Script</tr>
-          <tr>software-engineering</tr>
+          <tr>HTML, </tr>
+          <tr>CSS, </tr>
+          <tr>Java Script, </tr>
+          <tr>software-engineering.</tr>
         </tbody>
       </table>
       <!--Uclear as to why this is showing up and a single line of text and not a table. I double checked my coding and refreshed. Still not showing up correctly. Whats wrong?
