styling page photo.

--- a/myart.html
+++ b/myart.html
@@ -6,7 +6,8 @@
     <title>Mike's Art</title>
 </head>
 <body>
-  <h1>Art from my DnD and ofther RPG's I have played with friends only this last year.</h1>
+  <h1>Art from my DnD and other RPG's I have played with friends only this last year.</h1>
+  <p>I enjoy both GM/STing and playing DnD5e and some WoD RPG's on the weekend with friends. Here is my avatars from last year. </p>
   <img src="img/FOD.jpg" alt="Verious Token Tool avatars for Table Top RPG 6 in total"><img src="img/FOD.png" alt="Verious Token Tool avatars for Table Top RPG 6 in total"><img src="img/fod2.png" alt="Verious Token Tool avatars for Table Top RPG 6 in total">
   <img src="img/images.png" alt="Verious Token Tool avatars for Table Top RPG 6 in total"><img src="img/me 2.png" alt="Verious Token Tool avatars for Table Top RPG 6 in total"><img src="img/Voss-S.png" alt="Verious Token Tool avatars for Table Top RPG 6 in total">
 </body>
