--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- TODO: Add your code. -->
     <h1>Michael C Gruber</h1>  
 
-    <img src="img/IMG_20240123_123426071.jpg" height="200"  width="200"  alt="Close headshot of Michael, the CV's creator.">
+    <img src="img/IMG_20240123_123426071.jpg" height="200"  width="200"  alt="Close headshot of Michael, the CV's creator." id="self">
     <!-- <p>Mike believed he knew all about HTML before starting this project. 
         However he did learn a lot of rules he was not following.</p> -->
     
@@ -118,7 +118,7 @@
   <label for="contactinfo">Please enter you name and email or phone number to reach back out to you. If you liked what you see or have observations about what I can do better.</label><br>
   <input type="text" name="Name" id="contactinfo" placeholder="Your name">
   <input type="email" name="email" id="contactino" placeholder="email@domain.???">
-  <input type="number" name="Phone Number" id="contactinfo" placeholder="111-111-1111"><br>
+  <input type="number" name="Phone Number" id="contactinfo" placeholder="1112223333"><br>
 <label for="contactinfo">
   <input type="radio" name="Feedback" id="contactinfo" value="Liked it"> Liked it! <br>
 </label>
