--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
     <section>
-      <p>Skills I learned on my own over the years.
+      <p><h2>Skills I learned on my own over the years.</h2>
         <ul>
           <li>Hardware-engineering</li>
           <li>Website devlopment</li>
@@ -114,7 +114,8 @@
     </section>
 
     <section>
-      <p>I believe that there are core skills we all have that are not tought but instilled into us as children or driven into us as we get older and wiser. Here is a short list of the ones I hold myself above others.</p><p></p><ul>Core beliefs</ul>
+      <p>I believe that there are core skills we all have that are not tought but instilled into us as children or driven into us as we get older and wiser. Here is a short list of the ones I hold myself above others.</p><p></p>
+      <ul><H2>Core beliefs</H2></ul>
     <ol>
       <li>Self accountability.</li>
       <li>Time management.</li>
