--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <p>I enjoy online Table top RPGs with friends and would like to include a <a href="myart.html">Link to my avatars from last year.</a></p></section>
 
-    <section><p><h3><b>Now onto work!</b></h3></p>
+    <section class="work"><p><h3><b>Now onto work!</b></h3></p>
 
 <p>Bellow is the link to the formal training course I took in 2024 and if you are looking into becoming a software-engineer I highly recoment you start there.</p>
     <h3><a href="https://usfbootcamps.com/leads/software-engineering/?utm_source=google&utm_medium=cpc&utm_campaign=146354195888&utm_content=664260239173&utm_term=usf%20coding%20bootcamp&hsa_acc=3678112474&hsa_cam=18225455903&hsa_grp=146354195888&hsa_ad=664260239173&hsa_src=g&hsa_tgt=kwd-405991151648&hsa_kw=usf%20coding%20bootcamp&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=CjwKCAiA-vOsBhAAEiwAIWR0Td67NmeekJbzqt-ozfDTIb_9vxAQgf6Pzkkh9F9-tpVXI3hphB3tKRoCaUMQAvD_BwE">Recomended training.</a></h2>
