--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <ul>
           <li>Hardware-engineering</li>
           <li>Website devlopment</li>
-          <li>Database maintance</li>
+          <li>Database maintenance</li>
           <li>Excel</li>
           <li>Word</li>
           <li>Avatar design</li>
