added js file to cv

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
 </p></section>
-<form action="Userforms" method="post">
+<form method="post">
   <label for="contactinfo">Please enter you name and email or phone number to reach back out to you. If you liked what you see or have observations about what I can do better.</label><br>
   <input type="text" name="Name" id="contactinfo" placeholder="Your name">
   <input type="email" name="email" id="contactino" placeholder="email@domain.???">
@@ -141,6 +141,6 @@
 <button type="submit">Click to submit info.</button>
 </form>
 <small> Please keep in mind this iformation for to my public server and anything you put in can be found by someone who know where to look. So I would advise you not to but anything you do not want out there.</small>
-
+<script src="cv.js"></script>
   </body>
 </html>
